crates/libs/frieze/tests/ui/tuple_struct.rs
use frieze::Schema;

#[derive(Schema)]
struct S(i64);

fn main() {}
